--- a/styles/style.css
+++ b/styles/style.css
@@ -280,7 +280,6 @@
     .button_cell
     {
         width: 100%;
-        height: 20%;
         padding: 15px;
     }
 
@@ -1758,13 +1757,27 @@
     line-height: 22px;
 }
 
+.bubble
+        {
+          background: #e02424;          
+          position: absolute;
+          right: 5px;
+          top: -5px;
+          padding: 2px 6px;
+          color: #fff;
+          font: bold .9em Tahoma, Arial, Helvetica;
+          -moz-border-radius: 3px;
+          -webkit-border-radius: 3px;
+          border-radius: 3px;
+        }
 
 
 
 
 
-
-
+.responsive-image {
+    height: 85% !important;
+}
 
 
 
