--- a/styles/framework.css
+++ b/styles/framework.css
@@ -424,7 +424,7 @@ textarea{
 .bg-2{background-image:url(../images/pictures/2.jpg);}
 .bg-3{background-image:url(../images/pictures/3.jpg);}
 .bg-4{background-image:url(../images/pictures/4.jpg);}
-.bg-5{background-color: #EFC689;}
+/*.bg-5{background-color: #EFC689;}*/
 .bg-6{background-image:url(../images/pictures/6.jpg);}
 .bg-7{background-image:url(../images/pictures/7.jpg);}
 .cover-screen{background-size:cover; background-position: center center;}
@@ -1962,11 +1962,11 @@ calendar*{
 #status {
 	position:fixed;
 	z-index:99999999;
-	width:250px;
-	height:280px;
+	width:500px;
+	height:600px;
 	position:absolute;
-	left:50%; 
-	top:50%; 
+	left:35%; 
+	top:15%; 
     padding-bottom:40px;
 	background-image:url(../images/framework/page-loader.gif); 
 	background-size:64px 64px;
@@ -1977,13 +1977,13 @@ calendar*{
 
 .preloader-logo{
     background-image:url(../images/preload-logo.png);
-    background-size:75px 75px;
-    height:75px;
-    width:75px;
+    background-size:500px 600px;
+    height:600px;
+    width:500px;
     display:block;
     margin-left:auto;
     margin-right:auto;
-    margin-bottom:40px;
+    
 }
 
 #preloader h3{
